--- a/css/style_list_attr.css
+++ b/css/style_list_attr.css
@@ -11,7 +11,6 @@ body {
     min-width: 375px;
     margin: 20px 20px;
     background-color: #d6d6d6;
-    /* border: 2px solid springgreen; */
 }
 
 header {
@@ -38,8 +37,7 @@ header .title {
     grid-row: 2 / 3;
 }
 
-header .title h1,
-header .title p {
+header .title h1 {
     color: #ffb703;
     font-size: 30px;
     font-family: "Robot", sans-serif;
@@ -47,15 +45,13 @@ header .title p {
 }
 
 @media screen and (min-width: 750px) {
-    header .title h1,
-    header .title p {
+    header .title h1 {
         font-size: 35px;
     }
 }
 
 @media screen and (min-width: 750px) {
-    header .title h1,
-    header .title p {
+    header .title h1 {
         font-size: 35px;
     }
 }
@@ -362,12 +358,21 @@ nav a:focus {
 footer {
     margin-top: 20px;
     height: 7vh;
-    color: #ffb703;
-    font-size: 18px;
-    font-family: "Robot", sans-serif;
-    font-weight: 400;
     background-color: #023047;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+footer h2 {
+    color: #ffb703;
+    font-family: "Robot", sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+@media screen and (min-width: 650px) {
+    footer h2 {
+        font-size: 22px;
+    }
 }
