--- a/css/style_hotspring.css
+++ b/css/style_hotspring.css
@@ -37,8 +37,7 @@ header .title {
     grid-row: 2 / 3;
 }
 
-header .title h1,
-header .title p {
+header .title h1{
     color: #ffb703;
     font-size: 30px;
     font-family: "Robot", sans-serif;
@@ -46,8 +45,7 @@ header .title p {
 }
 
 @media screen and (min-width: 750px) {
-    header .title h1,
-    header .title p {
+    header .title h1 {
         font-size: 35px;
     }
 }
@@ -162,17 +160,6 @@ main .sidenav .ticket::before {
     content:"";
 }
 
-main .sidenav .share::before {
-    background-image: url('../img/share.png');
-    background-size: 25px 25px;
-    background-repeat: no-repeat;
-    display: inline;
-    width: 25px; 
-    height: 25px;
-    content:"";
-}
-
-
 main .sidenav a:hover,
 main .sidenav a:focus {
     background-color: #ffb703;
@@ -221,7 +208,7 @@ main .sidenav a:focus {
     padding: 10px;
 }
 
-.container .details p {
+.container .details > p {
     padding: 10px;
     color: #ffb703;
     font-size: 18px;
@@ -229,10 +216,6 @@ main .sidenav a:focus {
     font-weight: 400;
 }
 
-.container .details p a {
-    width: 100%;
-    text-align: center;
-}
 
 @media screen and (min-width: 799px) {
     .container .details img {
@@ -264,33 +247,53 @@ nav {
     }
 }
 
-.container a {
+.container .details a {
+    text-decoration: none;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50%;
-    width: 80%;
+    height: 10%;
+    width: 50%;
     border-radius: 10px;
     font-family: "Robot", sans-serif;
     font-weight: 600;
     font-size: 20px;
     color: #ffb703;
-    text-decoration: none;
+    background-color: #023047;
+    border: 4px solid #ffb703;
     transition: background-color 700ms ease-in-out, color 700ms ease-in-out, border 500ms ease-in-out;
     display: flex;
-    ;
-    border: 4px solid #ffb703;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .details a:before {
+    background-image: url('../img/share.png');
+    background-size: 25px 25px;
+    background-repeat: no-repeat;
+    display: inline;
+    width: 25px; 
+    height: 25px;
+    content:"";
+}
+
+@media screen and (max-width: 799px) {
+    .container .details a {
+        display: none;
+    }
+}
+
+.container .details a:hover,
+.container .details a:focus {
+    background-color: #ffb703;
+    color: #023047;
+    border: 4px solid #023047;
+    
 }
 
 .container a p {
     text-align: center;
-}
-
-.container a:hover,
-.container a:focus {
-    background-color: #ffb703;
-    color: #023047;
-    border: 4px solid #023047;
 }
 
 nav a {
@@ -321,12 +324,21 @@ nav a:focus {
 footer {
     margin-top: 20px;
     height: 7vh;
-    color: #ffb703;
-    font-size: 18px;
-    font-family: "Robot", sans-serif;
-    font-weight: 400;
     background-color: #023047;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+footer h2 {
+    color: #ffb703;
+    font-family: "Robot", sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+@media screen and (min-width: 650px) {
+    footer h2 {
+        font-size: 22px;
+    }
 }
