--- a/css/style_confirmation.css
+++ b/css/style_confirmation.css
@@ -223,6 +223,7 @@ main .container h1 {
     font-family: "Robot", sans-serif;
     font-weight: 600;
     margin: 0 auto;
+    text-shadow: 2px 2px  #8ECAE6;
 }
 
 .animated-show {
