--- a/css/style_hotspring.css
+++ b/css/style_hotspring.css
@@ -196,7 +196,7 @@ main .sidenav a:focus {
     background-color: #023047;
     display: grid;
     grid-template-columns: 10px 1fr 10px;
-    grid-template-rows: 20px 10vh 10px 1fr 10px;
+    grid-template-rows: 20px 30px 10px 1fr 10px;
 }
 
 .container h1 {
@@ -213,7 +213,7 @@ main .sidenav a:focus {
     grid-column: 2 / 3;
     grid-row: 4 / 5;
     width: 100%;
-    height: 65vh;
+    height: 50vh; 
     overflow-x: hidden;
     overflow-y: auto;
     text-align: justify;
@@ -221,7 +221,6 @@ main .sidenav a:focus {
 
 .container .details img {
     width: 100%;
-    height: auto;
     padding: 10px;
 }
 
@@ -238,7 +237,6 @@ main .sidenav a:focus {
     .container .details img {
         float: left;
         width: 50%;
-        height: auto;
         padding: 10px;
     }
 }
