--- a/css/style_submission.css
+++ b/css/style_submission.css
@@ -223,7 +223,7 @@ main .container input[type="text"],
 main .container input[type="email"] {
     border: 3px solid transparent;
     font-size: 16px;
-    height: auto;
+    /* height: auto; */
     margin: 0;
     outline: 0;
     padding: 14px;
