--- a/css/style_list_attr.css
+++ b/css/style_list_attr.css
@@ -103,7 +103,7 @@ main .sidenav a {
     color: #ffb703;
     background-color: #023047;
     text-decoration: none;
-    transition: background-color 500ms ease-in-out, color 500ms ease-in-out, box-shadow 500ms ease-in-out;
+    transition: background-color 500ms ease-in-out, color 500ms ease-in-out, box-shadow 500ms ease-in-out, transform 500ms;
     display: flex;
     border: 4px solid #023047;
 }
@@ -184,6 +184,7 @@ main .sidenav a:focus {
     background-color: #ffb703;
     color: #023047;
     box-shadow: 0px 5px #023047;
+    transform: translateX(-5px);
 }
 
 
