--- a/css/style_hotspring.css
+++ b/css/style_hotspring.css
@@ -270,7 +270,7 @@ nav {
     justify-content: center;
     align-items: center;
     height: 10%;
-    width: 50%;
+    width: 170px;
     border-radius: 10px;
     font-family: "Robot", sans-serif;
     font-weight: 600;
